# kaseq4-capstone-red

./: .gitignore  README.md  db.sqlite3  et --soft bb8934e  manage.py  package-lock.json  package.json  pyproject.toml
authentication/: urls.py  views.py
author/: admin.py  forms.py  models.py  urls.py  views.py
author/migrations/: 0001_initial.py
bower_components/jquery/: .bower.json
bower_components/nutrition-label-jquery-plugin/: .bower.json
box/: asgi.py  settings.py  urls.py  views.py  wsgi.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_auto_20200722_1058.py
notification/: admin.py  models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
recipe/: admin.py  forms.py  models.py  urls copy.py  urls.py  views copy.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20200720_1927.py  0002_recipecard.py  0002_remove_recipe_favorites.py  0003_delete_recipecard.py
recipe/templates/: recipe_all.html  recipe_detail.html
recipe/templatetags/: custom_tags.py
recpie/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recpie/migrations/: 0001_initial.py  0002_author_email.py  0003_recpieitems_meal_option.py  0004_meal_type.py  0005_auto_20200707_2011.py  0006_auto_20200707_2050.py  (+4 more)
review/: admin.py  forms.py  models.py  urls.py  views.py
search/: urls.py  views.py
static/: base.css
static_dev/: style.css
templates/: 404.html  500.html  author.html  base.html  form.html  nav.html  recipe.html
user/: admin.py  forms.py  models.py  urls.py  views.py
(+51 files in other folders)
